// ================================================================
// twitter/build.gradle
// Spring Boot 4.0.5  |  Gradle 9.4.1  |  JDK 25
// ================================================================

plugins {
    id 'org.springframework.boot'           version '4.0.5'
    id 'io.spring.dependency-management'    version '1.1.7'
    id 'java'
}

// ---------------------------------------------------------------------------
// Project coordinates
// ---------------------------------------------------------------------------
group   = 'com.ziminpro.twitter'
version = '2.0'

// ---------------------------------------------------------------------------
// Java toolchain
// ---------------------------------------------------------------------------
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        vendor          = JvmVendorSpec.ORACLE
    }
}

// ---------------------------------------------------------------------------
// Repositories
// ---------------------------------------------------------------------------
repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

// ---------------------------------------------------------------------------
// Dependencies
// ---------------------------------------------------------------------------
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    // --- Web (reactive) ---
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // --- Database ---
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    runtimeOnly    'com.mysql:mysql-connector-j'

    // --- Lombok ---
    compileOnly         'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // --- Testing ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
}

// ---------------------------------------------------------------------------
// Test
// ---------------------------------------------------------------------------
tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}

// ---------------------------------------------------------------------------
// Compiler options
// ---------------------------------------------------------------------------
tasks.withType(JavaCompile).configureEach {
    options.release = 25
    options.compilerArgs << '--enable-preview'
    options.encoding = 'UTF-8'
}